// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAvatar /> with avatarLarge 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  text-align: center;
  overflow: hidden;
  background-position: 50% 50%;
  background-size: cover;
  border: 0;
  color: transparent;
  font-size: 12px;
  width: 24px;
  height: 24px;
}

.c1 {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

@media (min-width:568px) {
  .c0 {
    font-size: 16px;
    width: 44px;
    height: 44px;
  }
}

<UserAvatar
  avatarLarge="http://via.placeholder.com/350x150"
>
  <Wrapper
    avatarLarge="http://via.placeholder.com/350x150"
    variant="small"
  >
    <span
      className="c0"
    >
      <StyledImage
        alt=""
        src="http://via.placeholder.com/350x150"
      >
        <img
          alt=""
          className="c1"
          src="http://via.placeholder.com/350x150"
        />
      </StyledImage>
    </span>
  </Wrapper>
</UserAvatar>
`;

exports[`<UserAvatar /> with initial 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  text-align: center;
  overflow: hidden;
  border: 2px solid;
  font-size: 12px;
  width: 24px;
  height: 24px;
}

@media (min-width:568px) {
  .c0 {
    font-size: 16px;
    width: 44px;
    height: 44px;
  }
}

<UserAvatar
  initial="B"
>
  <Wrapper
    initial="B"
    variant="small"
  >
    <span
      className="c0"
    >
      B
    </span>
  </Wrapper>
</UserAvatar>
`;

exports[`<UserAvatar /> with initial props 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  text-align: center;
  overflow: hidden;
  font-size: 12px;
  width: 24px;
  height: 24px;
}

@media (min-width:568px) {
  .c0 {
    font-size: 16px;
    width: 44px;
    height: 44px;
  }
}

<UserAvatar>
  <Wrapper
    variant="small"
  >
    <span
      className="c0"
    />
  </Wrapper>
</UserAvatar>
`;
